methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:26: error: Unit does not take parameters
  faireCadre()()
              ^PictureMono2:28: error: Unit does not take parameters
  faireCadre()()
              ^PictureMono2:30: error: Unit does not take parameters
  faireCadre()()
              ^